--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,17 +1,14 @@
-name: CI
+name: Deploy via git-ftp
 on: push
-
 jobs:
-  linux:
-    name: Linux build on node ${{ matrix.node_version }}
+  deploy:
+    name: Deploy
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node_version: [8.x, 10.x]
-
     steps:
-    - name: Checkout
-      uses: actions/checkout@v1
-
-    - name: Install packages
-      run: git ftp push -u "barnabe.geffroy" -p $password "sftp://pedago-ext.ensiie.fr/~/public_html/projet-web"
+    - uses: actions/checkout@v1
+    - name: git-ftp push
+      uses: sebastianpopp/git-ftp-action@releases/v3
+      with:
+        url: "sftp://pedago-ext.ensiie.fr/~/public_html/projet-web"
+        user: barnabe.geffroy
+        password: ${{ secrets.ftp_password }}
