--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,14 +1,11 @@
-name: Deploy via git-ftp
 on: push
+
 jobs:
-  deploy:
-    name: Deploy
+       
+  archive-build-artifacts:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v1
-    - name: git-ftp push
-      uses: sebastianpopp/git-ftp-action@releases/v3
-      with:
-        url: "sftp://pedago-ext.ensiie.fr/~/public_html/projet-web"
-        user: barnabe.geffroy
-        password: ${{ secrets.ftp_password }}
+
+      - name: update public_html
+        run: |
+          git ftp push -u "barnabe.geffroy" -p ${{ secrets.ftp_password }} "sftp://pedago-ext.ensiie.fr/~/public_html/projet-web"
