--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,11 @@
 on: push
 
 jobs:
-       
   archive-build-artifacts:
     runs-on: ubuntu-latest
+    defaults:
+      run: 
+        working-directory: .
     steps:
 
       - name: update public_html
